WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
238047
REGRESSION (
r290628
): Scrubber makes a visual trail when scrubbing on tv.youtube.com
https://bugs.webkit.org/show_bug.cgi?id=238047
Summary
REGRESSION (r290628): Scrubber makes a visual trail when scrubbing on tv.yout...
Simon Fraser (smfr)
Reported
2022-03-17 13:55:36 PDT
REGRESSION (
r290628
): Scrubber makes a visual trail when scrubbing on tv.youtube.com
Attachments
Patch
(5.98 KB, patch)
2022-03-17 14:00 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(7.00 KB, patch)
2022-03-17 15:14 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2022-03-17 14:00:12 PDT
Created
attachment 455025
[details]
Patch
Simon Fraser (smfr)
Comment 2
2022-03-17 14:00:16 PDT
<
rdar://problem/90310316
>
Simon Fraser (smfr)
Comment 3
2022-03-17 15:13:31 PDT
<
rdar://problem/90451319
>
Simon Fraser (smfr)
Comment 4
2022-03-17 15:14:25 PDT
Created
attachment 455034
[details]
Patch
EWS
Comment 5
2022-03-18 12:38:10 PDT
Committed
r291493
(
248605@main
): <
https://commits.webkit.org/248605@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 455034
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug